fix issues with APK and overlapping boxes in settings

--- a/CluedoNotes/wwwroot/css/app.css
+++ b/CluedoNotes/wwwroot/css/app.css
@@ -46,13 +46,18 @@ a, .btn-link {
 }
 .settings-dropdown {
     margin: 5px;
-    width: 30%;
+    width: 80%;
     min-width: 111px;
 }
-.settingsPage li {
-    display: flex;
-}
 
+@media only screen and (min-width: 700px) {
+    .settingsPage li {
+        display: flex;
+    }
+    .settings-dropdown {
+        width: 60%;        
+    }
+}
 .settingsPage li select {
     display: flex;
 }
